@@ -283,6 +283,7 @@ Trunk (unreleased changes)
                (Jean-Daniel Cryans via Stack)
    HBASE-730   On startup, rinse STARTCODE and SERVER from .META.
                (Jean-Daniel Cryans via Stack)
+   HBASE-738   overview.html in need of updating (Izaak Rubin via Stack)
 
   NEW FEATURES
    HBASE-47    Option to set TTL for columns in hbase
